# G4EMMA

./: #EMMAapp.cc#  .gitignore  18FRecoils.mac  18FRecoils.mac~  78KrBeam.mac~  79BrBeam.mac  79BrBeam.mac~  80KrRecoils.mac~  BGField1.hh  BGField2.hh  BGField3.hh  BGField4.hh  BGField5.hh  BGField6.hh  BGField7.hh  BeamSetup.mac  BeamSetup.mac~  BeamSetup2.mac  BeamSetup2.mac~  BeamSetup3.mac  BeamSetup3.mac~  CMakeCache.txt  CMakeLists.txt  CathodeWireParameterisation.hh  EMMADetectorConstruction.hh  EMMADriftChamber.hh  EMMAEMPhysics.hh  EMMAElementField.hh  EMMAGeneralPhysics.hh  EMMAGlobalField.hh  EMMAHadronPhysics.hh  EMMAIonPhysics.hh  EMMAMuonPhysics.hh  EMMANuclearReactionTwoBody.hh  EMMAapp  EMMAapp.cc  EMMAapp.cc~  Makefile  Makefile~  README.txt  (+13 more)
.svn/: wc.db
Documentation/: EMFieldDebugger.cc  GEMMA1.6documentation.tex  GEMMA1.6documentation.toc  GEMMA1.7documentation.aux  GEMMA1.7documentation.out  GEMMA1.7documentation.toc
G4EMMA-build/: BeamSetup.mac  CMakeCache.txt  EMMAapp  Makefile  cmake_install.cmake  visEMMA.mac
f2c/: 00lastchange  MD5  index.html
fortran/: Add_Fortran_2_G4  diagnostic.inc  gcunit.inc  mitray.cc  mitray_diag.inc  mitray_dipole.f  mitray_edipol.f  mitray_poles.f  mitray_sasp.f  mitray_solnd.f  mitray_zone.f
html/: CMakeLists_8txt.html  EMMAapp_8cc.html  EMMAapp_8cc__incl.map  EMMAapp_8cc__incl.md5  files.html  globals.html  globals_func.html  globals_vars.html
include/: #BGField4.hh#  BGField1.hh  BGField1.hh~  BGField2.hh  BGField2.hh~  BGField3.hh  BGField3.hh~  BGField5.hh  BGField5.hh~  BGField6.hh  BGField6.hh~  BGField7.hh~  CathodeWireParameterisation.hh  EMFieldDebugger.hh  EMFieldDebugger.hh~  EMMAAnalysisManager.hh  EMMADetectorConstMessenger.hh  EMMADetectorConstruction.hh~  EMMADriftChamberHit.hh  EMMADriftChamberHit.hh~  EMMAEMPhysics.hh  EMMAElementField.hh~  EMMAEventAction.hh  EMMAEventAction.hh~  EMMAEventActionMessenger.hh  EMMAGeneralPhysics.hh  EMMAGlobalField.hh  EMMAGlobalField.hh~  EMMAHadronPhysics.hh  EMMAIonChamber.hh  EMMAIonChamberHit.hh  EMMAIonPhysics.hh  EMMAIonPhysicsMessenger.hh  EMMAMuonPhysics.hh  EMMANuclearReactionDataSet.hh  EMMANuclearReactionProcess.hh  EMMANuclearReactionTwoBody.hh  EMMANuclearReactionTwoBody.hh~  EMMAPhysicsList.hh  EMMAPrimaryGeneratorAction.hh  (+11 more)
latex/: CMakeLists_8txt.tex  EMMAapp_8cc.tex  EMMAapp_8cc__incl.md5  files.tex  refman.tex
macros/: 78KrBeam.mac  79RbRecoils.mac  80KrRecoils.mac  BeamSetup.mac  BeamSetup.mac~  JackExp.mac  JackExp.mac~  MoMoExp.mac  Sr93Exp.mac  run1.mac  run1.mac~  visAperture.mac  visAperture.mac~  visMWPC.mac  visdebug.mac  visdegraders.mac  visdetector.mac
root_macros/: Sr93Exp.cpp  Sr93Exp_Sr93.root  acceptance_plots.cpp  dispersion_plots.cpp
src/: #EMMADetectorConstruction.cc#  #mitray.cc#  BGField1.cc  BGField1.cc~  BGField2.cc  BGField2.cc~  BGField3.cc  BGField3.cc~  BGField4.cc  BGField5.cc  BGField5.cc~  BGField6.cc  BGField6.cc~  BGField7.cc  BGField7.cc~  EMFieldDebugger.cc  EMFieldDebugger.cc~  EMMAAnalysisManager.cc  EMMADetectorConstruction.cc  EMMADetectorConstruction.cc~  EMMADriftChamber.cc  EMMADriftChamber.cc~  EMMAEventAction.cc  (+31 more)
(+1974 files in other folders)
